--- a/src/app/navBar/NavBar.module.css
+++ b/src/app/navBar/NavBar.module.css
@@ -7,6 +7,7 @@
   height: 100%;
   background-color: var(--nav-background-color);
   padding-left: 180px;
+  font-family: 'Pretendard Variable';
 }
 .Home-Button {
   display: flex;
@@ -305,4 +306,106 @@
 }
 .Issue-Icon.active-icon {
   background-image: var(--nav-bar-active-Issue-icon);
+}
+.alarm-wrapper {
+  /* position: relative; */
+}
+.alarm-popup-container {
+  position: absolute;
+  top: 125px; /* 버튼 아래로 배치 */
+  left: 10px; /* 버튼과 정렬 */
+  width: 300px; /* 팝업 너비 */
+  background-color: var(--nav-bar-alarm-popup-box-background-color);
+  color: var(--nav-bar-alarm-popup-box-text-color);
+  border: 1px solid var(--nav-bar-alarm-popup-box-border-color);
+  border-radius: 10px;
+  padding: 10px;
+  z-index: 1000;
+}
+.alarm-popup-Top {
+  display: flex;
+  padding: 5px;
+  flex-direction: row;
+  gap: 12px;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
+.alarm-popup-Top-User-Profile-Image {
+  background-image: url(./../../assets/WR.png);
+  width: 36px;
+  height: 36px;
+  background-size: cover;
+  border-radius: 50%;
+  background-position: center;
+}
+.alarm-popup-Top-User-More {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  flex: 1;
+}
+
+.alarm-popup-Top-User-Follow-Request {
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+  color: var(--nav-bar-alarm-popup-box-user-follow-request-text-color);
+}
+.alarm-popup-Top-User-Nickname {
+  font-size: 12px;
+  align-items: center;
+  justify-content: center;
+  color: var(--nav-bar-alarm-popup-box-user-nickname-text-color);
+}
+.alarm-popup-Top-More {
+}
+.alarm-popup-Bottom {
+  display: flex;
+  flex-direction: column;
+}
+.alarm-popup-Today {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.alarm-popup-Item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 8px;
+  border-radius: 8px;
+  background-color: var(--nav-bar-alarm-popup-box-item-background-color);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+.alarm-popup-Item:hover {
+  background-color: var(--nav-bar-alarm-popup-box-item-hover-background-color);
+}
+
+.alarm-popup-Item-Profile {
+  width: 26px;
+  height: 26px;
+  background-image: url('./../../assets/WR.png');
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+}
+
+.alarm-popup-Item-Content {
+  display: flex;
+  gap: 4px;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.alarm-popup-Item-Text {
+  font-size: 12px;
+}
+
+.alarm-popup-Item-Time {
+  font-size: 10px;
+
+  align-self: flex-end;
 }
