--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,10 @@
   --post-Page-Upload-Button-text-color: #000000;
 
   --mypage-image-userInitialImage: url('./../assets/JJangGuWinter.png');
+  --mypage-image-settingWhite: url('./../assets/settingWhite.png');
+  --mypage-image-settingBlack: url('./../assets/settingBlack.png');
+
+  --mypage-gray-color: #dbdbdb;
 }
 body {
   background-color: #f9fafa;
