--- a/src/app/auth/signin/Signin.module.css
+++ b/src/app/auth/signin/Signin.module.css
@@ -79,7 +79,7 @@
 .email-input,
 .pw-input {
   outline: none;
-  border: 1px solid lightgray;
+  border: 1px solid lightgrey;
   border-radius: 5px;
   width: 400px;
   height: 40px;
@@ -132,7 +132,7 @@
 .divider {
   width: 100%;
   height: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--sign-in-divider-color);
   padding-bottom: 10px;
   margin: 30px 0px;
 }
