--- a/src/components/tab/tabNavigation/Tab.Navigation.module.css
+++ b/src/components/tab/tabNavigation/Tab.Navigation.module.css
@@ -2,12 +2,12 @@
   margin: 0rem;
   padding: 0rem;
 
-  width: 100%;
+  width: 48rem;
   height: 2.75rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  border-top: 0.1rem solid var(--mypage-gray-color);
+  border-top: 0.1rem solid var(--mypage-tab-color);
 }
 
 .tab-Button {
@@ -21,7 +21,7 @@
   border:none;
   background-color:transparent;
 
-  color: var(--mypage-gray-color);
+  color: var(--mypage-tab-color);
 
   cursor:pointer;
 }
