--- a/src/app/mypage/MyPage.module.css
+++ b/src/app/mypage/MyPage.module.css
@@ -23,11 +23,13 @@
 }
 
 .user-Info {
-  width: 46rem;
-  height: 13rem;
+  width: 48rem;
+  /* height: 12rem; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  margin : 2rem 0rem;
 }
 
 .user-Image {
@@ -47,7 +49,7 @@
 
 .user-Data-Wrapper {
   width: 20rem;
-  height: 10rem;
+  /* height: 8rem; */
   display: flex;
   flex-direction: column;
   font-family: 'Pretendard Variable';
@@ -93,16 +95,11 @@
 
 
 .user-Edit {
-  width: 14rem;
+  /* width: 100%; */
   display: flex;
   flex-direction: row;
   justify-content : space-between;
-}
-.edit-Button {
-  width: 5rem;
-}
-.user-Name {
-
+  gap:1rem;
 }
 
 .user-setting {
@@ -118,6 +115,17 @@
   border: none;
   background-color: transparent; /* 배경 투명 설정 */
   padding: 0rem;
+}
+
+.edit-Button {
+  width: 5rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: var(--mypage-Edit-color);
+  cursor:pointer;
+}
+.user-Name {
+  font-size: 1.25rem;
 }
 
 .tab-Content {
