refactor: 목데이터 생성 및 테스트 완료, ssr위한 리팩토링은 추후 다시 작업예정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@
 }
 /* 라이트모드 */
 :root {
+/* 사용자 기본 이미지 */
+--default-profile-image : url('./../assets/GuestIcon_Dark.png');
+--default-profile-image-hover : url('./../assets/GuestIcon_White.png');
+
   --splash-screen-background-color: #ffffff;
   --header-logo-image: url('./../assets/floelogo.png');
   --header-border-bottom-color: rgba(0, 0, 0, 0.2);
@@ -93,7 +97,6 @@
   --nav-bar-Issue-icon: url('./../assets/IssueIcon_Dark.png');
   --nav-bar-More-icon: url('./../assets/MoreIcon_Dark.png');
   --nav-bar-Guest-icon: url('./../assets/GuestIcon_Dark.png');
-
   --nav-bar-Home-icon-Hover: url('./../assets/HomeIcon_White.png');
   --nav-bar-Alarm-icon-Hover: url('./../assets/HeartIcon_White.png');
   --nav-bar-Add-icon-Hover: url('./../assets/AddIcon_White.png');
@@ -191,6 +194,10 @@ body {
 
 /* 다크 모드 변수 설정 */
 .dark-mode {
+/* 사용자 기본 이미지 */
+--default-profile-image : url('./../assets/GuestIcon_White.png');
+--default-profile-image-hover : url('./../assets/GuestIcon_Dark.png');
+
   --splash-screen-background-color: #000000;
   --header-logo-image: url('./../assets/floelogo-dark.png');
   --header-border-bottom-color: rgba(255, 255, 255, 0.3);
