--- a/src/app/post/[recordId]/PostDetail.module.css
+++ b/src/app/post/[recordId]/PostDetail.module.css
@@ -21,7 +21,7 @@
   max-width: 1200px;
   border-radius: 15px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  min-height: 500px;
+  min-height: 280px;
   max-height: fit-content;
   font-family: 'Pretendard Variable';
   background-color: var(--post-item-background-color);
@@ -43,12 +43,29 @@
 .profile-image-box {
   width: 36px;
   height: 36px;
-  border-radius: 60px;
-
-  background-image: url(./../../../assets/WR.png);
-  background-size: cover;
-  background-position: 50% 50%;
   margin-left: 15px;
+  cursor: pointer;
+}
+.profile-image {
+  border-radius: 50% 50%;
+  width: 100%;
+  height: 100%;
+
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+}
+
+.default-profile-image {
+  background-image: var(--default-profile-image);
+  border-radius: 50% 50%;
+  width: 100%;
+  height: 100%;
+
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+}
+.default-profile-image:hover {
+  background-image: var(--default-profile-image-hover);
 }
 .user-nickname {
   font-size: 20px;
@@ -57,7 +74,7 @@
 .post-detail-main {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
 }
 
 .stack-tag-box {
@@ -77,7 +94,7 @@
 }
 .post-detail-content {
   display: flex;
-  padding: 0px 15px;
+  padding: 20px 15px;
   height: auto;
   align-items: center;
   font-size: 18px;
