--- a/src/components/post/postItemCardType/Post.Card.module.css
+++ b/src/components/post/postItemCardType/Post.Card.module.css
@@ -23,19 +23,38 @@
 .profile-image-box {
   width: 36px;
   height: 36px;
-  border-radius: 60px;
-  cursor: pointer;
-  background-image: url(./../../../assets/WR.png);
-  background-size: cover;
-  background-position: 50% 50%;
   margin-left: 15px;
   cursor: pointer;
+}
+
+.profile-image {
+  border-radius: 50% 50%;
+  width: 100%;
+  height: 100%;
+
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+}
+.default-profile-image {
+  background-image: var(--default-profile-image);
+  border-radius: 50% 50%;
+  width: 100%;
+  height: 100%;
+
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+}
+.default-profile-image:hover {
+  background-image: var(--default-profile-image-hover);
 }
 .user-nickname {
   font-size: 20px;
   cursor: pointer;
 }
-
+.create-at {
+  font-size: 15px;
+  margin-left: 50px;
+}
 .card-main {
   display: flex;
   flex-direction: column;
@@ -55,6 +74,7 @@
   height: 30px;
   align-items: center;
   font-size: 18px;
+  font-weight: bold;
 }
 .card-content {
   display: flex;
@@ -62,14 +82,23 @@
   height: auto;
   align-items: center;
   font-size: 16px;
+  margin-bottom: 15px;
 }
 .card-image {
-  display: flex;
-  padding-left: 15px;
+  margin-top: 20px;
+  width: auto;
   height: auto;
+  display: flex;
   align-items: center;
-  font-size: 16px;
+  justify-content: center;
 }
+.title-image {
+  width: auto;
+  min-width: 35%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 .card-bottom {
   margin-left: 15px;
   display: flex;
