--- a/src/components/post/postItemListType/Post.List.module.css
+++ b/src/components/post/postItemListType/Post.List.module.css
@@ -46,36 +46,48 @@
   flex-direction: row; /* 변경: 가로 방향 */
   align-items: center;
   gap: 20px; /* 콘텐츠와 이미지 간격 */
+  cursor: pointer;
 }
 
 .text-container {
   display: flex;
   flex-direction: column; /* 제목과 내용을 세로로 배치 */
-  width: 100%;
+  width: calc(100% - 320px); /* 이미지 공간을 제외한 나머지 공간 */
+  gap: 8px;
 }
 .list-title {
   display: flex;
   padding-left: 15px;
-  height: 30px;
   align-items: center;
   font-size: 18px;
+  height: 30px;
+  font-weight: bold;
+  margin-top: 10px;
 }
 .list-content {
   display: flex;
   padding-left: 15px;
-  height: 180px;
+  height: 120px;
+  align-items: center;
   font-size: 16px;
+  margin-bottom: 15px;
 }
 .list-image {
   display: flex;
-  height: 200px;
   width: 300px; /* 고정된 너비 및 높이 설정 */
-  border-radius: 8px;
+  height: 200px;
   margin-right: 20px;
-  text-align: center;
   justify-content: center;
   align-items: center;
 }
+
+.title-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 .list-bottom {
   margin-left: 15px;
   display: flex;
